added section on revenue and one on price for static model

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -56,6 +56,7 @@
 \newacronym{rps}{RPS}{Renewable Portfolio Standard}
 \newacronym{shap}{SHAP}{Shapley Additive Explanation}
 \newacronym{sigt}{SiGT}{Silica Geothermometer Temperature}
+\newacronym{steo}{STEO}{Short Term Energy Outlook}
 \newacronym{tn}{TN}{True Negative}
 \newacronym{tp}{TP}{True Positive}
 \newacronym{tpr}{TPR}{True Positive Rate}
