--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,28 @@
 
+@misc{microsoft_forecastets_2021,
+	title = {{FORECAST}.{ETS} function},
+	url = {https://support.microsoft.com/en-us/office/forecast-ets-function-15389b8b-677e-4fbd-bd95-21d464333f41},
+	abstract = {Calculates or predicts a future value based on existing (historical) values by using the AAA version of the Exponential Smoothing (ETS) algorithm. The predicted value is a continuation of the historical values in the specified target date, which should be a continuation of the timeline. You can use this function to predict future sales, inventory requirements, or consumer trends. This function requires the timeline to be organized with a constant step between the different points.},
+	language = {en-US},
+	urldate = {2021-07-13},
+	author = {{Microsoft}},
+	year = {2021},
+}
+
+@techreport{gifford_crest_2013,
+	title = {{CREST} {Cost} of {Renewable} {Energy} {Spreadsheet} {Tool}: {A} {Model} for {Developing} {Cost}-{Based} {Incentives} in the {United} {States}; {User} {Manual} {Version} 4, {August} 2009 - {March} 2011 ({Updated} {July} 2013)},
+	shorttitle = {{CREST} {Cost} of {Renewable} {Energy} {Spreadsheet} {Tool}},
+	url = {http://www.osti.gov/servlets/purl/1010865/},
+	language = {en},
+	number = {NREL/SR-6A20-50374, 1010865},
+	urldate = {2021-07-11},
+	author = {Gifford, J. S. and Grace, R. C.},
+	month = jul,
+	year = {2013},
+	doi = {10.2172/1010865},
+	pages = {NREL/SR--6A20--50374, 1010865},
+}
+
 @misc{pnm_public_2014,
 	title = {Public {Service} {Company} of {New} {Mexico}'s {Renewable} {Energy} {Portfolio} {Procurement} {Plan} {For} 2015},
 	shorttitle = {{NM} {PRC} {Case} {No}. 14-00\_\_-{UT}},
