--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,23 @@
 
+@techreport{murphy_electrification_2021,
+	address = {Golden, CO},
+	title = {Electrification futures study: {Scenarios} of power system evolution and infrastructure development for the united states},
+	institution = {National Renewable Energy Lab},
+	author = {Murphy, Caitlin and Mai, Trieu and Sun, Yinong and Jadun, Paige and Muratori, Matteo and Nelson, Brent and Jones, Ryan},
+	year = {2021},
+}
+
+@techreport{larson_energy_2018,
+	address = {New York, NY},
+	title = {Energy and {Environmental} {Implications} of a {Carbon} {Tax} in the {United} {States}},
+	url = {https://energypolicy.columbia.edu/sites/default/files/pictures/CGEP_Energy_Environmental_Impacts_CarbonTax_FINAL.pdf},
+	institution = {Columbia University},
+	author = {Larson, John and Mohan, Shashank and Marsters, Peter and Herndon, Whitney},
+	year = {2018},
+	note = {An independent report prepared by Rhodium Group for
+Columbia SIPA Center on Global Energy Policy},
+}
+
 @misc{microsoft_forecastets_2021,
 	title = {{FORECAST}.{ETS} function},
 	url = {https://support.microsoft.com/en-us/office/forecast-ets-function-15389b8b-677e-4fbd-bd95-21d464333f41},
@@ -2925,19 +2944,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	title = {Temperature changes in the {United} {States}. {Climate} {Science} {Special} {Report}: {Fourth} {National} {Climate} {Assessment}, {DJ} {Wuebbles} et al., {Eds}., {Vol}. {I}, {US} {Global} {Change} {Research} {Program}, 185–206},
 	author = {Vose, RS and Easterling, DR and Kunkel, KE and LeGrande, AN and Wehner, MF},
 	year = {2017},
-}
-
-@techreport{murphy_electrification_2021,
-	title = {Electrification futures study: {Scenarios} of power system evolution and infrastructure development for the united states},
-	institution = {National Renewable Energy Lab.(NREL), Golden, CO (United States)},
-	author = {Murphy, Caitlin and Mai, Trieu and Sun, Yinong and Jadun, Paige and Muratori, Matteo and Nelson, Brent and Jones, Ryan},
-	year = {2021},
-}
-
-@article{larson_energy_2018,
-	title = {Energy and {Environmental} {Implications} of a {Carbon} {Tax} in the {United} {States}},
-	author = {Larson, John and Mohan, Shashank and Marsters, Peter and Herndon, Whitney},
-	year = {2018},
 }
 
 @article{wuebbles_climate_2017,
